; ModuleID = '/home/carl/AnghaBench/linux/drivers/pci/extr_p2pdma.c_pci_p2pdma_map_sg_attrs.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/pci/extr_p2pdma.c_pci_p2pdma_map_sg_attrs.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.device = type { i32 }
%struct.scatterlist = type { i32 }
%struct.pci_p2pdma_pagemap = type { i32 }
%struct.pci_dev = type { i32 }
%struct.TYPE_2__ = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @pci_p2pdma_map_sg_attrs(%struct.device* %0, %struct.scatterlist* %1, i32 %2, i32 %3, i64 %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca %struct.device*, align 8
  %8 = alloca %struct.scatterlist*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i64, align 8
  %12 = alloca %struct.pci_p2pdma_pagemap*, align 8
  %13 = alloca %struct.pci_dev*, align 8
  store %struct.device* %0, %struct.device** %7, align 8
  store %struct.scatterlist* %1, %struct.scatterlist** %8, align 8
  store i32 %2, i32* %9, align 4
  store i32 %3, i32* %10, align 4
  store i64 %4, i64* %11, align 8
  %14 = load %struct.scatterlist*, %struct.scatterlist** %8, align 8
  %15 = call %struct.TYPE_2__* @sg_page(%struct.scatterlist* %14)
  %16 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = call %struct.pci_p2pdma_pagemap* @to_p2p_pgmap(i32 %17)
  store %struct.pci_p2pdma_pagemap* %18, %struct.pci_p2pdma_pagemap** %12, align 8
  %19 = load %struct.device*, %struct.device** %7, align 8
  %20 = call i32 @dev_is_pci(%struct.device* %19)
  %21 = icmp ne i32 %20, 0
  %22 = xor i1 %21, true
  %23 = zext i1 %22 to i32
  %24 = call i64 @WARN_ON_ONCE(i32 %23)
  %25 = icmp ne i64 %24, 0
  br i1 %25, label %26, label %27

26:                                               ; preds = %5
  store i32 0, i32* %6, align 4
  br label %50

27:                                               ; preds = %5
  %28 = load %struct.device*, %struct.device** %7, align 8
  %29 = call %struct.pci_dev* @to_pci_dev(%struct.device* %28)
  store %struct.pci_dev* %29, %struct.pci_dev** %13, align 8
  %30 = load %struct.pci_p2pdma_pagemap*, %struct.pci_p2pdma_pagemap** %12, align 8
  %31 = getelementptr inbounds %struct.pci_p2pdma_pagemap, %struct.pci_p2pdma_pagemap* %30, i32 0, i32 0
  %32 = load i32, i32* %31, align 4
  %33 = load %struct.pci_dev*, %struct.pci_dev** %13, align 8
  %34 = call i32 @pci_p2pdma_map_type(i32 %32, %struct.pci_dev* %33)
  switch i32 %34, label %48 [
    i32 128, label %35
    i32 129, label %42
  ]

35:                                               ; preds = %27
  %36 = load %struct.device*, %struct.device** %7, align 8
  %37 = load %struct.scatterlist*, %struct.scatterlist** %8, align 8
  %38 = load i32, i32* %9, align 4
  %39 = load i32, i32* %10, align 4
  %40 = load i64, i64* %11, align 8
  %41 = call i32 @dma_map_sg_attrs(%struct.device* %36, %struct.scatterlist* %37, i32 %38, i32 %39, i64 %40)
  store i32 %41, i32* %6, align 4
  br label %50

42:                                               ; preds = %27
  %43 = load %struct.pci_p2pdma_pagemap*, %struct.pci_p2pdma_pagemap** %12, align 8
  %44 = load %struct.device*, %struct.device** %7, align 8
  %45 = load %struct.scatterlist*, %struct.scatterlist** %8, align 8
  %46 = load i32, i32* %9, align 4
  %47 = call i32 @__pci_p2pdma_map_sg(%struct.pci_p2pdma_pagemap* %43, %struct.device* %44, %struct.scatterlist* %45, i32 %46)
  store i32 %47, i32* %6, align 4
  br label %50

48:                                               ; preds = %27
  %49 = call i64 @WARN_ON_ONCE(i32 1)
  store i32 0, i32* %6, align 4
  br label %50

50:                                               ; preds = %48, %42, %35, %26
  %51 = load i32, i32* %6, align 4
  ret i32 %51
}

declare dso_local %struct.pci_p2pdma_pagemap* @to_p2p_pgmap(i32) #1

declare dso_local %struct.TYPE_2__* @sg_page(%struct.scatterlist*) #1

declare dso_local i64 @WARN_ON_ONCE(i32) #1

declare dso_local i32 @dev_is_pci(%struct.device*) #1

declare dso_local %struct.pci_dev* @to_pci_dev(%struct.device*) #1

declare dso_local i32 @pci_p2pdma_map_type(i32, %struct.pci_dev*) #1

declare dso_local i32 @dma_map_sg_attrs(%struct.device*, %struct.scatterlist*, i32, i32, i64) #1

declare dso_local i32 @__pci_p2pdma_map_sg(%struct.pci_p2pdma_pagemap*, %struct.device*, %struct.scatterlist*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
